# assets-git-link-test

./: Cargo.toml
src/: lib.rs
