[package]
name = "assets-git-link-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collect-assets = { git = "https://github.com/DioxusLabs/collect-assets" }
test-package-dependency = { git = "https://github.com/DioxusLabs/collect-assets" }
